--- a/clusters/use1-eks27-test-web-01/flux-system/gotk-sync.yaml
+++ b/clusters/use1-eks27-test-web-01/flux-system/gotk-sync.yaml
@@ -19,7 +19,7 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1m
   path: ./clusters/use1-eks27-test-web-01
   prune: true
   sourceRef:
