Update global config for use1-eks27-test-web-01

--- a/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: global-config
-spec:
-  interval: 1m
-  path: "./cluster/use1-eks27-test-web-01"
-  prune: true
-  timeout: 1m
+  namespace: flux-system
+resources:
+  - ./apps-repo.yaml
+  - ./global-cluster-config.yaml
