--- a/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-
+metadata:
+  name: global-config
+  namespace: flux-system
 resources:
   - ./apps-repo.yaml
   - ./global-cluster-config.yaml
