Update global config

--- a/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/global-config/kustomize.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-
-resources:
+metadata:
+  name: global-config
+  namespace: flux-system
+spec:
+  resources:
   - ./apps-repo.yaml
   - ./global-cluster-config.yaml
