Update gitrepo to ssh

--- a/clusters/use1-eks27-test-web-01/global-config/apps-repo.yaml
+++ b/clusters/use1-eks27-test-web-01/global-config/apps-repo.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m
-  url: https://github.com/pedrost/flux-specs-apps/
+  url: ssh://git@github.com/pedrost/flux-specs-apps.git
   ref:
     branch: main
