--- a/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
@@ -1,12 +1,12 @@
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: carts-api
-# spec:
-#   interval: 1m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-specs-apps
-#   path: "./apps/carts-api/overlays/dev"
-#   prune: true
-#   timeout: 1m
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: carts-api
+spec:
+  interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-specs-apps
+  path: "./apps/carts-api/overlays/dev"
+  prune: true
+  timeout: 1m
