--- a/clusters/use1-eks27-test-web-01/global-config/apps-repo.yaml
+++ b/clusters/use1-eks27-test-web-01/global-config/apps-repo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: flux-specs-apps
   namespace: flux-system
 spec:
-  interval: 1m
-  url: ssh://git@github.com/pedrost/flux-specs-apps.git
+  interval: 5m
+  url: https://github.com/pedrost/flux-specs-apps/
   ref:
     branch: main
