Add depends on carts-api

--- a/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
@@ -4,6 +4,8 @@ metadata:
   name: carts-api
 spec:
   interval: 1m
+  dependsOn:
+  - name: global-config
   sourceRef:
     kind: GitRepository
     name: flux-specs-apps
