--- a/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
@@ -2,10 +2,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: carts-api
+  namespace: carts
 spec:
   interval: 1m
-  dependsOn:
-  - name: global-config
   sourceRef:
     kind: GitRepository
     name: flux-specs-apps
