--- a/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
+++ b/clusters/use1-eks27-test-web-01/carts-api/kustomize.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: carts-api
-  namespace: carts
+  namespace: default
 spec:
   interval: 1m
   sourceRef:
